--- a/StS-DefaultModBase-master/DDmod/pom.xml
+++ b/StS-DefaultModBase-master/DDmod/pom.xml
@@ -3,11 +3,11 @@
 
     <!--Hello! You'll basically should only need to change these names and the steam path (just below)-->
     <!--The author name(s) as they appear in MTS and any other comments are in your ModTheSpire.json-->
-    <groupId>defaultmod</groupId>
+    <groupId>ddMod</groupId>
     <artifactId>DDmod</artifactId>
     <name>DD Mod</name>
-    <version>0.0.1</version>
-    <description>A default base to start your own mod from.</description>
+    <version>0.3.0</version>
+    <description>An Ironclad class expansion mod.</description>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
